@@ -20,3 +20,4 @@ Código:
 	19/10/2022: Informe casi terminado
 	20/10/2022: Documentación
 	22/10/2022: Archivo de pruebas avanzado
+	23/10/2022: Archivo de pruebas terminado (A menos que no coincida con el script de pruebas que aun no suben)
